adeed start button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>SIMON SAYS Game</h1>
-    <h2>Press Any Key To Continue</h2>
+    <h2>Press Start</h2>
+    <div class="button">
+        <button>START</button>
+    </div>
     <div class="container">
         <div class="lineone">
         <div class="btn red"  type="button" id="red">1</div>
