--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>SIMON SAYS Game</h1>
     <h2>Press Start</h2>
     <div class="button">
-        <button>START</button>
+        <button id = "btn">START</button>
     </div>
     <div class="container">
         <div class="lineone">
